--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npx vite build"
-  publish = "dist"
+  command = "npm run build"
+  publish = "dist/public"
 
 [build.environment]
   NODE_VERSION = "18"
